    an empty Array object in certain cases.
  * Fixed a bug where NSDate objects are converted to Time objects.
  * Fixed a bug where it cannot use the structures which have same signature.
    (Ex NSRect and CGRect in 64-bit app)
  * Improved Range.new performance. 20% faster.
  * Improved Array performance where finalizes object and expands internal
    memory. 15% faster.

= RubyMotion 2.16 =

  * Fixed a heap overflow in floating point parsing (CVE-2013-4164).
  * Improved Time#{<, >, ==, eql?} performance. 9 times faster.
  * Improved the performance when NSDate objects are converted to Time objects.
    10 times faster.
  * Fixed regression in the REPL that made it impossible to use block local
    variables.

= RubyMotion 2.15 =

  * Added support for Xcode 5.1 Developer Preview and iOS 7.1 Beta.
  * Improved REPL to recognize Simulator at any scale and orientation. The only
    unsupported variant at this time is a Simulator window with scroll bars.
  * Fixed REPL<->Simulator coordinate translation when run on a Retina Mac.
  * Fixed undefined behaviour in REPL such as local variables not being stored.
  * Improved dispatching of shortcut methods (ex foo= is shortcut of setFoo:).
    20 times faster.
  * Improved the performance where Fixnum and Float are returned. 20% faster.
  * Improved Array#concat performance. About 2 times faster.
  * Improved Array#reverse performance. 2 times faster.
  * Improved Array#reverse! performance. 8 times faster.
  * Improved Array#rotate performance. 5 times faster.
  * Improved Array#rotate! performance. 40 times faster.
  * Improved iterators performance (ex Array#{each, map}). 2-3 times faster.
  * Fixed a bug where Array#rotate! causes a crash in REPL.
  * Fixed a bug where the objects created by "CFxxxCreate(args)" are not
    released.
  * Fixed a bug in dispatcher where #super cannot look up the shortcut method.
    (ie #foo=)
  * Improve the precision of Float value.